Fri Oct  8 11:19:44 UTC 2010  Olli Savia  <ops@iki.fi>

        * protocols/ace/RMCast/Flow.cpp:
          Added missing include.

Fri Oct  8 08:42:37 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
        * ace/os_include/os_unistd.h:
        * configure.ac:
        * m4/config_h.m4:
          Removed references to ACE_LACKS_PREAD_PROTOTYPE. It is no
          longer used.

Fri Oct  8 08:20:04 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.inl:
        * ace/README:
        * tests/OS_Test.cpp:
          Removed references to ACE_LACKS_RENAME. It is no
          longer used.

Fri Oct  8 07:51:46 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-integritySCA.h:
          Removed references to ACE_LACKS_IPC_H. It is no
          longer used.

Fri Oct  8 07:48:38 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/README:
          Removed references to ACE_LACKS_IOSTREAMS_TOTALLY. It is no
          longer used.

        * ace/os_include/os_stropts.h:
          Fixed typo.

Fri Oct  8 07:42:26 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
        * ace/README:
        * ace/Svc_Conf_Lexer.cpp:
          Removed references to ACE_LACKS_CLEARERR. It is no
          longer used.

Fri Oct  8 06:58:56 UTC 2010  Olli Savia  <ops@iki.fi>

        * protocols/ace/RMCast/Flow.cpp:
        * tests/CDR_Array_Test.cpp:
        * tests/CDR_File_Test.cpp:
        * tests/CDR_Test.cpp:
        * tests/Upgradable_RW_Test.cpp:
          Use ACE::is_equal() to compare floating point values.

Thu Oct  7 12:34:20 UTC 2010  Olli Savia  <ops@iki.fi>

        * ASNMP/tests/Counter64_Test.cpp:
        * ace/ETCL/ETCL_Constraint.cpp:
        * ace/Monitor_Control/CPU_Load_Monitor.cpp:
          Use ACE::is_equal() to compare floating point values.

Tue Oct  5 07:23:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * COPYING:
          Small updates
