@@ -2336,6 +2336,7 @@ Catherine L. Paquin <catherine dot paquin at ngc dot com>
 Susan Finster <sfinster at daetwyler-rd dot com>
 Frank Preischl <Frank dot Preischl at ids dot de>
 Matthew Waller <matthewrwaller at gmail dot com>
+Elez <elezsh at gmail dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
